Reformatted using Google code style